Fix problem with contact section overflowing at smaller screen sizes

--- a/front-end/src/styles/contact.css
+++ b/front-end/src/styles/contact.css
@@ -1,7 +1,7 @@
 #contact {
   background-color: var(--col-blue-drk);
   color: #fff;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 #contact h2.title::after {
